# examples/routers.go
@@ -79,6 +79,7 @@ func addApiRoute(r kaligo.Router) {
 
 func addHomeRoute(r kaligo.Router) {
     r.AddRoute("/api/init", map[string]string{http.MethodGet: "Initialization"}, &controller.Home{})
+    r.AddRoute("/api/permissions", map[string]string{http.MethodGet: "Permissions"}, &controller.Home{})
 
     r.AddRoute("/", map[string]string{http.MethodGet: "Index"}, &controller.Home{})
     r.AddRoute("/home/:tplName", map[string]string{http.MethodGet: "Index"}, &controller.Home{})
